--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -6,6 +6,6 @@
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
 Plugins, "SDA2D3D", pl.umk.mat.fastSDA.imageJ.sdaPlugin.Process_SDA
-#Plugins, "SoftSDA", net.pikonrad.imageJ.softSdaPlugin.SoftSda
+Plugins, "SoftSDA", pl.umk.mat.fastSDA.imageJ.softSdaPlugin.SoftSda
 #Process, "Process DataCollection", net.pikonrad.imageJ.Process_pikoDataCollection
 #Process, "Process Piko Test", net.pikonrad.imageJ.sdaPlugin.PikoTest
